@@ -60,12 +60,14 @@
             href="http://trac.cyberduck.ch/ticket/1724">#1724</a>]
     </li>
     <li>[Feature] Support for Asia Pacific (Tokyo) location (S3)</li>
-    <li>[Bugfix] Limit number of concurrent transfers (<a
-            href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
-    </li>
+    <li>[Feature] Website endpoint configuration option for buckets (S3)</li>
+    <li>[Feature] CDN configuration for website endpoints as custom origin (CloudFront)</li>
     <li>[Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)</li>
     <li>[Feature] Skip option not available in transfer prompt [<a
             href="http://trac.cyberduck.ch/ticket/1159">#1159</a>]
+    </li>
+    <li>[Bugfix] Limit number of concurrent transfers (<a
+            href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
     </li>
     <li>[Bugfix] Qeued transfers start in random order (#5632)</li>
     <li>[Bugfix] Dragging into topmost folder in browser (<a
@@ -85,7 +87,7 @@
     <li>[Bugfix] Large transfer history causes slowdown (<a
             href="http://trac.cyberduck.ch/ticket/2889">#2889</a>)
     </li>
-    <li>[Bugfix] Files not shown (<a
+    <li>[Bugfix] List all files regardless of document ownership (<a
             href="http://trac.cyberduck.ch/ticket/5570">#5570</a>) (Google Docs)
     </li>
     <li>[Bugfix] Images always converted to documents (<a
