@@ -19,6 +19,8 @@ Changelog. Last modified: $Date$
 - [Feature] Skip option not available in transfer prompt [#1159]
 - [Feature] User interface to create symbolic links (SFTP) [#1724]
 - [Feature] Support for Asia Pacific (Tokyo) location (S3)
+- [Feature] Website endpoint configuration option for buckets (S3)
+- [Feature] CDN configuration for website endpoints as custom origin (CloudFront)
 - [Bugfix] Limit number of concurrent transfers (#5539, #5624)
 - [Bugfix] Qeued transfers start in random order (#5632)
 - [Bugfix] Dragging into topmost folder in browser (#1945)
@@ -27,7 +29,7 @@ Changelog. Last modified: $Date$
 - [Bugfix] Unicode normalization for filenames in upload (#5162)
 - [Bugfix] Duplicate file breaks editing (#5524)
 - [Bugfix] Large transfer history causes slowdown (#2889)
-- [Bugfix] Files not shown (#5570) (Google Docs)
+- [Bugfix] List all files regardless of document ownership (#5570) (Google Docs)
 - [Bugfix] Images always converted to documents (#5601) (Google Docs)
 - [Bugfix] Preserve symbolic links in transfers (#1860) (SFTP)
 - [Bugfix] High CPU usage after transfer has completed (#5640)
